--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 html,body{
     height: 100%;
     width: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #main{
@@ -77,7 +78,7 @@ html,body{
 .bottom-page1>h1{
     font-weight: 100;
     line-height: 1;
-    font-size: 60px;
+    font-size: 50px;
 }
 .bottom-page1-inner{
     position: absolute;
@@ -304,6 +305,7 @@ html,body{
 .page9-right{
     width: 80%;
     display: flex;
+    margin-bottom: 3rem;
     flex-direction: column;
     align-items: center;
     color: white;
@@ -327,4 +329,81 @@ html,body{
     font-size: 22px;
     line-height: 1.3;
     color: #ffffffb4;
+}
+#page10{
+    height: 120vh;
+    width: 100vw;
+    background-color: #fff;
+}
+#page10
+>h1{
+    padding-top: 3rem;
+    margin-left: 6rem;
+    font-size: 5vw;
+    font-weight: 100;
+}
+.page10-inner{
+    color: rgb(97, 96, 96);
+    padding: 1rem;
+    display: flex;
+    width: 80%;
+    gap: 4rem;
+    margin: auto;
+}
+.page10-inner .img-upper{
+    height: 200px;
+    width: 600px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.page10-inner .img-upper .image {
+    background-image: url("https://thisismagma.com/wp-content/uploads/2023/12/thisismagma.com-magma-bringing-bringin-tangible-value-to-nfts.jpeg");
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+    object-fit: cover;
+    transition: all .5s ease-in-out;
+}
+
+.page10-inner .img-upper:hover .image,
+.page10-inner .img-upper:hover .image1,
+.page10-inner .img-upper:hover .image2 {
+    transform: scale(1.035);
+}
+
+.page10-inner .img-upper .image1 {
+    background-image: url("https://thisismagma.com/wp-content/uploads/2023/11/thisismagma.com-magma-welcomes-alejandro-laplana-to-its-advisory-board-screenshot-2023-11-30-at-13.43.46.png");
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+    object-fit: cover;
+    transition: all .5s ease-in-out;
+}
+.page10-inner .img-upper .image2 {
+    background-image: url("https://thisismagma.com/wp-content/uploads/2023/11/thisismagma.com-magma-devoile-sa-plateforme-ce-15-novembre-linkedin-cover---magma.png");
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+    object-fit: cover;
+    transition: all .5s ease-in-out;
+}
+
+.page10-inner .blog-details{
+    display: flex;
+    flex-direction: column;;
+    justify-content: center;
+    align-items:flex-start;
+}
+.page10-inner .blog-details>h1{
+    font-size: 20px;
+    margin-top: 1rem;
 }
